# Esp32_training_cluster

./: README.md
esp32/: comm.h  dense_layer.h  losses.h  main.ino  matrix_ops.h  status_led.h  trainer.h
server/: data_prep.py  main.py  server.py  test_model.py
server/cpp_tokenizer/: CMakeLists.txt  README.md   bpe_tokenizer.cpp  bpe_tokenizer.h  tokenizer_binding.cpp
server/data/: corpus.txt
server/src/: app.py  checkpoint.py  config.py  data_loader.py  heartbeat.py  matrix_gen.py  model.py  monitor.py  progress.py  routes.py  state.py  storage.py
